fix: simplify DrugInteractionCheckerTest to match service behavior